--- a/client/app/statstic/statstic.html
+++ b/client/app/statstic/statstic.html
@@ -51,10 +51,18 @@
             <hr>
 
             <div class="row">
+
                 <!-- center left-->
                 <div class="col-md-6">
                     <h3>Tommy Shay</h3>
 					</br> 
+
+					<div id="graph">
+						<form>
+						  <label><input type="radio" name="mode" value="grouped"> Grouped</label>
+						  <label><input type="radio" name="mode" value="stacked" checked> Stacked</label>
+						</form>
+					</div>
 
                     <div class="btn-group btn-group-justified">
                         <a href="#" class="btn btn-primary col-sm-4">
