refactor problems route

--- a/client/app/problemCreation/problemCreation.html
+++ b/client/app/problemCreation/problemCreation.html
@@ -60,7 +60,7 @@
 		
 		<div class="form-group">
 			<div class="col-sm-6">
-				<label for="comment">Ttle:</label>
+				<label for="comment">Title:</label>
 				<input class="form-control" ng-model="problemCreationCtrl.title">
 			</div>
 			<div class="col-sm-6">
