--- a/client/_index.html
+++ b/client/_index.html
@@ -17,13 +17,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.7.0/highlight.min.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="app/css/jquery.bxslider.css">
-    <link rel="stylesheet" type="text/css" href="app/css/animate.css">
-    <link rel='stylesheet' type="text/css" href='app/css/fullcalendar.css' />
-    <link rel='stylesheet' type="text/css" href='app/css/style-dashboard.css' />
-    <link rel='stylesheet' type="text/css" href='app/css/fullcalendar.css' />
-    <link rel="stylesheet" type="text/css" href="app/css/style.css">
     
     <script src="//d3js.org/d3.v3.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/codemirror.js"></script>
@@ -36,6 +29,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/mode/python/python.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/mode/javascript/javascript.min.js"></script>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+
 </head>
 <body>
     <!--[if lt IE 9]>
@@ -57,21 +51,21 @@
     <div ui-view="" class="body"></div>
     <footer></footer>
 
-    <script src="app/js/typed.min.js"></script>
-    <script src="app/js/jquery.easing.min.js"></script>
-    <script src="app/js/wow.js"></script>
-    <script src="app/js/highcharts.js"></script>
-    <script src="app/js/exporting.js"></script>
-    <script src="app/js/jquery.bxslider.min.js"></script>
-    <script src='app/js/moment.min.js'></script>
-    <script src='app/js/fullcalendar.js'></script>
-    <script src='app/js/calendar.js'></script>
-    <script src="app/js/custom.js"></script>
-    <!-- <script src="app/js/contactform/contactform.js"></script> -->
-    <script src="app/js/studentStatistics.js"></script>
-    <script src="app/js/classStatistics.js"></script>
-    <script src="app/js/teacher.js"></script>
-    <script src="app/js/problemAttempts.js"></script>
+    <script src="assets/js/typed.min.js"></script>
+    <script src="assets/js/jquery.easing.min.js"></script>
+    <script src="assets/js/wow.js"></script>
+    <script src="assets/js/highcharts.js"></script>
+    <script src="assets/js/exporting.js"></script>
+    <script src="assets/js/jquery.bxslider.min.js"></script>
+    <script src='assets/js/moment.min.js'></script>
+    <script src='assets/js/fullcalendar.js'></script>
+    <script src='assets/js/calendar.js'></script>
+    <script src="assets/js/custom.js"></script>
+    <!-- <script src="assets/js/contactform/contactform.js"></script> -->
+    <script src="assets/js/studentStatistics.js"></script>
+    <script src="assets/js/classStatistics.js"></script>
+    <script src="assets/js/teacher.js"></script>
+    <script src="assets/js/problemAttempts.js"></script>
     <script>
       $(function(){
           $("#typewriter").typed({
