--- a/client/app/teacher/subpage/studentStatistics.html
+++ b/client/app/teacher/subpage/studentStatistics.html
@@ -1,4 +1,4 @@
-<div id="studentStatistics">
+<div id="studentStatistics" ng-init="teacherCtrl.initStatistic()">
 	<div class="container-fluid">
 	      <a href="#"><strong><i class="glyphicon glyphicon-dashboard"></i> Student Statistics</strong></a>
 	      <hr></hr>
