--- a/client/app/teacher/subpage/classStatistics.html
+++ b/client/app/teacher/subpage/classStatistics.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" ng-init="teacherCtrl.initClassStats()">
   <a href="#"><strong><i class="glyphicon glyphicon-dashboard"></i> Class Statistics</strong></a>
   <hr>
   
