--- a/client/app/problems/id/problems.id.html
+++ b/client/app/problems/id/problems.id.html
@@ -19,7 +19,7 @@
 			<div class="col-md-6 editor-panel">
 				<div class="editor-options">
 					<span>
-						<select id="languageSelector">
+						<select class="" id="languageSelector">
 						  <option value="text/x-csrc" name="c">C</option>
 						  <option value="text/x-python" name="python2">Python2</option>
 						  <option value="text/x-python" name="python3">Python3</option>
