--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -65,12 +65,12 @@
         </div>
 
         <div>
-          <button class="btn btn-inverse btn-lg btn-register" type="submit">
-            Sign up
-          </button>
-          <a class="btn btn-default btn-lg btn-login" ui-sref="login">
+          <a class="btn btn-info btn-lg btn-login" ui-sref="login">
             Login
           </a>
+          <button class="btn btn-primary btn-lg btn-register" type="submit">
+            Sign up
+          </button>
         </div>
 
         <hr/>
