--- a/client/app/problems/add/problems.add.html
+++ b/client/app/problems/add/problems.add.html
@@ -7,7 +7,7 @@
         <hr>
         <div class="row">       
           <div class="col-sm-10">
-          <div class="form-group">
+          <!-- <div class="form-group">
                 <label>Assign Problem to Students: 
                   </br>
                   <span style="color:#999999">(hold ctrl to select more than one)</span>
@@ -17,7 +17,12 @@
                 <select style="height: 154px" multiple class="form-control selectStudents" id="selectStudents">
                   <option ng-repeat="std in ProblemsAddCtrl.students">{{std.name}}</option>
                 </select>
-          </div>
+          </div> -->
+
+          <!-- <label>Due Date </label>(optional):
+          <datepicker date-format="MMMM d, y">
+            <input class="form-control" placeholder=" Choose a date" type="text" ng-model="ProblemsAddCtrl.dueDate"/>
+          </datepicker> -->
           <hr>
           <br/>
             <!-- <div class="form-group">
@@ -92,7 +97,7 @@
                 <div class="list-group-item list-group-item-info">
                   <a data-toggle="collapse" data-parent="#stacked-menu" href="#p{{$index + 1}}">Test {{$index + 1}}<span class="caret arrow"></span></a>
 
-                  <a href="" class="pull-right" ng-click="ProblemsAddCtrl.deleteTest($index)">delete</a>
+                  <a href="" class="pull-right" ng-click="ProblemsAddCtrl.deleteTest($index)" ng-hide="$index == 0">delete</a>
                 </div>
 
                 <ul class="nav nav-pills nav-stacked collapse in" id="p{{$index + 1}}">
