--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,4 +1,7 @@
-<div class="header" style="background: url('../../assets/images/background.jpg') no-repeat fixed !important;">
+<div class="header" style="background: url('../../assets/images/background.jpg') no-repeat fixed !important; -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;">
   <div class="bg-color">
 
     <div class="wrapper">
