--- a/client/app/problems/all/problems.all.html
+++ b/client/app/problems/all/problems.all.html
@@ -5,8 +5,8 @@
       <tr>
         <!-- <th>Id</th> -->
         <th>Title</th>
-        <th>Assigner</th>
-        <th>Assignee</th>
+        <!-- <th>Assigner</th> -->
+        <!-- <th>Assignee</th> -->
         <!-- <th>Complete rate</th> -->
         <th>Due date</th>
       </tr>
@@ -15,8 +15,8 @@
       <tr ng-repeat="problem in problemsCtrl.problems track by $index">
         <!-- <td>{{problem._id}}</td> -->
         <td><a ui-sref="problems.id({id: problem._id})">{{problem.title}}</a></td>
-        <td>{{problem.assignTo[0].assignerName}}</td>
-        <td><a ng-repeat="assignee in problem.assignTo">{{assignee.assigneeName}}, </a></td>
+        <!-- <td>{{problem.assignTo[0].assignerName}}</td> -->
+        <!-- <td><a ng-repeat="assignee in problem.assignTo">{{assignee.assigneeName}}, </a></td> -->
         <!-- <td>70%</td> -->
         <td>{{problem.deadline}}</td>
       </tr>
