--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,7 +1,7 @@
-<div class="header" style="background: url('../../assets/images/background.jpg') no-repeat fixed !important; -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;">
+<div class="header" style="background: url('../../assets/images/background.jpg') no-repeat fixed;
+    background-size: cover;
+    min-height: 650px;
+    position: relative;">
   <div class="bg-color">
 
     <div class="wrapper">
