--- a/client/app/teacher/subpage/problemAttempts.html
+++ b/client/app/teacher/subpage/problemAttempts.html
@@ -25,8 +25,8 @@
 
       <div class="col-sm-7"> <!-- Problem / Attempt Column -->
       <a href="#"><strong><i class="glyphicon glyphicon-education"></i> Problem and Student Attempts</strong></a>
-
       <hr>
+      <!-- <input type="" class="form-control" name="" placeholder="Search" ng-model="teacherCtrl.query"> -->
     
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true" ng-repeat="attempt in teacherCtrl.problems[teacherCtrl.currentProblem].attempts track by $index">
         <div class="panel panel-default">
